Swagger on index and State module
